--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
-PGUSER=
+PGUSER=postgres
 PGHOST=localhost
-PGPASSWORD=
-PGDATABASE=
-PGPORT=5432
-PORT=5000
+PGPASSWORD=postgres
+PGDATABASE=postgres
+PGPORT=5433
+PORT=5001
+JWT_ACCESS_SECRET=access_secret
+JWT_REFRESH_SECRET=refresh_secret
